<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/_tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_author"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAuthor"
        android:text="@string/hiphen"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/_tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/_tvContent"
        android:text="@string/review_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAuthor"
        />

    <TextView
        android:id="@+id/tvContent"
        android:text="@string/hiphen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAuthor"
        android:layout_toRightOf="@+id/_tvContent"
        />

    <TextView
        android:id="@+id/_tvUrl"
        android:text="@string/review_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContent"/>

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContent"
        android:layout_toEndOf="@+id/_tvUrl"
        android:text="@string/hiphen" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />

</RelativeLayout>