<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.project.siri.popularmovies.DetailsViewActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/imgalbum"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgPoster"
                android:layout_centerHorizontal="true"
                android:background="@android:color/background_dark"
                android:text="@string/movie_na"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:text="@string/movie_synopsis" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSynopsisTxt"
                android:text="@string/movie_rating" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRating"
                android:text="@string/movie_release" />

            <TextView
                android:id="@+id/tvSynopsisTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:layout_toEndOf="@+id/tvSynopsis"
                android:text="@string/movie_na" />

            <TextView
                android:id="@+id/tvRatingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSynopsisTxt"
                android:layout_toEndOf="@+id/tvRating"
                android:text="@string/movie_na" />

            <TextView
                android:id="@+id/tvReleaseDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRating"
                android:layout_toEndOf="@+id/tvReleaseDate"
                android:text="@string/movie_na" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />
            
            <TextView
                android:id="@+id/tvTrailersTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvReleaseDateTxt"
                android:text="@string/movie_trailers"
                android:textSize="25sp" />

            <ListView
                android:id="@+id/lvTrailers"
                android:layout_below="@+id/tvTrailersTxt"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scrollbars="vertical">
            </ListView>

            <TextView
                android:id="@+id/btnReviewsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lvTrailers"
                android:text="@string/movie_reviews"
                android:textSize="25sp" />

            <include layout="@layout/review_list"
                android:layout_width="fill_parent"
                android:layout_height="170dp"
                android:layout_below="@+id/btnReviewsTxt"/>

            <Button
                android:id="@+id/btnFavourite"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvReleaseDate"
                android:layout_marginEnd="14dp"
                android:background="@drawable/unfav"
                android:text="FAV" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvReleaseDate"
                android:layout_toStartOf="@+id/btnFavourite"
                android:text="Share Trailer" />


        </RelativeLayout>

</ScrollView>
